[package]
name = "git-lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.0.14",features=["cargo"]}
configparser = "3.0.0"
flate2 = {default-features = false,features = ["zlib"], version="1.0.22"}
sha1 = { version = "0.6.0", features = ["std"] }
byteorder = "1.4.3"
chrono = "0.4.19"
binascii = "0.1.4"
hex = "0.4.3"
